# ReFAKS

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt
src/common/: Unowned.hh
src/gltf/: Accessor.hh  Buffer.hh  BufferView.hh  Camera.hh  Forward.hh  Image.hh  Material.hh  Mesh.hh  Node.hh  Root.hh  Sampler.hh  Scene.hh  Skin.hh  Texture.hh  io.cc  io.hh
src/renderers/opengl/: CMakeLists.txt
src/renderers/opengl/src/: OpenGlRenderer.cc  OpenGlRenderer.hh
src/renderers/vulkan/: CMakeLists.txt
src/renderers/vulkan/src/: VulkanRenderer.cc
test/gltf/: iotest.cc
